<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".payment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="136dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/payments_txt_view_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/total_cost"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/payments_txt_view_total_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minHeight="48dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/payments_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/payment_options"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/payment_options" />

                    <RadioButton
                        android:id="@+id/payments_radio_btn_credit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/payments_radio_btn_credit" />

                    <RadioButton
                        android:id="@+id/payments_radio_btn_debit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/debit_card" />

                    <RadioButton
                        android:id="@+id/payments_radio_btn_master"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/master_card" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/payments_txt_view_card_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/card_number" />

                <EditText
                    android:id="@+id/payments_edit_txt_card_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:minHeight="48dp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/payments_txt_view_card_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Card Name" />

                <EditText
                    android:id="@+id/payments_edit_txt_card_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/payments_txt_view_cvv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cvv_code" />

                    <EditText
                        android:id="@+id/payments_edit_txt_cvv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:minHeight="48dp"
                        tools:ignore="SpeakableTextPresentCheck" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/payments_txt_view_exp_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/expiration_date" />

                    <EditText
                        android:id="@+id/payments_edit_txt_exp_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        tools:ignore="SpeakableTextPresentCheck" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">



                <Button
                    android:id="@+id/payments_btn_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/next" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>